# rustprod

./: Cargo.toml  Dockerfile  configuration.yml  configurationprod.yml
config/: base.yml  development.yml  production.yml
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: curves.rs  database.rs  health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
