[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Guillermo Almeida <guillermo.almeidaGutierrez@axpo.com>"]

[dependencies]
actix-web = "4"
async-std = "1.13.0"
config = "0.14.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
tiberius = "0.12.3"
tokio-util = { version = "0.7.12", features = ["compat"] } 

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
