[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Guillermo Almeida <guillermo.almeidaGutierrez@axpo.com>"]

[dependencies]
actix-web = "4"
async-std = "1.13.0"
async-trait = "0.1.83"
bb8 = "0.8.5"
config = "0.14.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }
tds = "0.1.3"

tiberius = "0.12.3"
tokio-util = { version = "0.7.12", features = ["compat"] } 
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.89"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
