[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Guillermo Almeida <guillermo.almeidaGutierrez@axpo.com>"]

[dependencies]
actix-web = "4"
async-std = "1.13.0"
async-trait = "0.1.83"
bb8 = "0.8.5"
config = "0.14.0"
dotenv = "0.15.0"
once_cell = "1.19.0"
r2d2 = "0.8.10"
serde = { version = "1.0", features = ["derive"] }

tiberius = "0.12.3"
tokio-util = { version = "0.7.12", features = ["compat"] } 
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.89"
bb8-tiberius = "0.15.0"
#env_logger = "0.11.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry"]  }
tracing-bunyan-formatter = "0.3.9"
tracing = "0.1.40"
uuid = {version = "1.10.0", features = ["v4","fast-rng", "macro-diagnostics"]}
secrecy = { version = "0.10.2", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1.12.0"
chrono = "0.4.38"
claim = "0.5.0"
validator = "0.18.1"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"
